Applied new core bundle construction to energy agent feature